Add source code note to self-assessment page

--- a/html-css-js-self-assessment/index.html
+++ b/html-css-js-self-assessment/index.html
@@ -35,6 +35,7 @@
     <!-- Main Content (Requirement 1) -->
     <main>
         <h1>Ray Tracing Rendering</h1>
+        <p class="note"><strong>NOTE:</strong> This is my self assessment static page, the source code is in <a href="https://github.com/DriedYellowPeach/cs5610-web-dev/tree/main/html-css-js-self-assessment" target="_blank">https://github.com/DriedYellowPeach/cs5610-web-dev/tree/main/html-css-js-self-assessment</a></p>
         <p>Ray tracing is a rendering technique that simulates the way light interacts with objects to produce realistic images. Below we explore four key aspects of ray tracing.</p>
 
         <!-- Section 1: Diffuse Color -->
