Add Project 1: Personal Homepage with Brow Control game
Features:
- About Me page with interests, skills, and contact info
- Work samples section with project showcases
- Embedded Brow Control game (face-controlled using MediaPipe)
- AI-generated page with interactive chat demo
- Dark theme following pine-heads design
- Typing terminal effect (original JS)
- Responsive design with flexbox/grid

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         <h1>CS5610 Web Development</h1>
         <p>Course projects and assignments</p>
         <div class="projects">
+            <a href="project-1-home-page/index.html" class="project-card">
+                <h2>Project 1: Home Page</h2>
+                <span>Personal Homepage with Game</span>
+            </a>
             <a href="html-css-js-self-assessment/index.html" class="project-card">
                 <h2>HTML/CSS/JS Self Assessment</h2>
                 <span>Ray Tracing Rendering Guide</span>
