feat: add new design page

--- a/project-1-home-page/index.html
+++ b/project-1-home-page/index.html
@@ -30,6 +30,7 @@
         <nav>
           <a href="index.html" class="nav-link active">Me</a>
           <a href="work.html" class="nav-link">Game</a>
+          <a href="design.html" class="nav-link">Design</a>
           <div class="theme-toggle">
             <button
               type="button"
