--- a/project-1-home-page/work.html
+++ b/project-1-home-page/work.html
@@ -33,6 +33,7 @@
         <nav>
           <a href="index.html" class="nav-link">Me</a>
           <a href="work.html" class="nav-link active">Game</a>
+          <a href="design.html" class="nav-link">Design</a>
         </nav>
       </div>
     </header>
@@ -89,6 +90,7 @@
               </p>
             </div>
           </div>
+
           <div id="reload-page-div" class="webcam" style="display: none">
             <h2>Camera Required</h2>
             <p>
